--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,13 @@
   padding: 0;
 }
 body {
+  background-color: #d3d3d3;
   padding-bottom: 300px;
 }
 h2 {
-  margin-bottom: 1.6rem;
+  font-size: 23px;
+  margin: 2rem;
+  padding-bottom: 10pxs;
   text-align: center;
   color: #333;
 }
@@ -21,13 +24,18 @@ h2 {
 #controls-container,
 #preview {
   flex: 1;
-  padding: 2rem;
+  padding: 1rem;
 }
 
+#preview h2 {
+  margin-left: 100px;
+}
 /* Controles */
 .form-control {
+  background-color: rgb(63, 50, 50);
+  border-radius: 10px;
   display: flex;
-  padding-bottom: 1.2rem;
+  padding: 0.3rem 0.5rem 1.5rem 0.5rem;
   margin-bottom: 1.2rem;
   border-bottom: 1px dashed #ccc;
 }
@@ -35,7 +43,7 @@ h2 {
 .form-control label {
   font-weight: bold;
   margin-bottom: 1rem;
-  color: #555;
+  color: rgb(241, 241, 241);
 }
 
 .range-input {
@@ -50,8 +58,9 @@ h2 {
   width: 100%;
   height: 24px;
   border-radius: 15px;
-  background-color: #d3d3d3;
+  background-color: #ffffff;
   outline: none;
+  border: 2px solid #1a47ab;
 }
 
 .range-input input[type='range']::-webkit-slider-thumb {
@@ -59,7 +68,7 @@ h2 {
   appearance: none;
   width: 25px;
   height: 25px;
-  background-color: #1a7961;
+  background-color: #1a47ab;
   border-radius: 15px;
   cursor: pointer;
 }
@@ -76,32 +85,56 @@ h2 {
 .form-control input[type='text'] {
   height: 30px;
   width: 30px;
+  border: 2px solid #1a47ab;
   margin-left: 1rem;
   text-align: center;
 }
-
+p {
+  color: #ccc;
+}
+#color {
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  padding: 1px;
+  margin-left: 10px;
+}
+#color-value {
+  cursor: pointer;
+  height: 40px;
+  width: 80px;
+  margin-top: 20px;
+}
 /* Preview */
 #box {
   margin: 80px 0px 10px 50px;
   width: 100%;
   height: 300px;
   border-radius: 15px;
-  background-color: #1c886d;
+  background-color: #1a47ab;
 }
 
-/* área de geraçã */
+/* área de geração */
 #generated-rule {
+  padding-top: 10px;
   text-align: center;
 }
 
 #generated-rule p {
   margin-bottom: 0.5rem;
 }
-
+#generated-rule h2 {
+  position: absolute;
+  left: 900px;
+  bottom: 220px;
+}
 #rules-area {
-  background-color: #d3d3d3;
-  max-width: 1000px;
-  margin: 0 auto;
-  border: 2px solid #1c886d;
+  background-color: rgb(63, 50, 50);
+  border-radius: 10px;
+  max-width: 500px;
+  position: absolute;
+  left: 940px;
+  bottom: 100px;
+  border: 2px solid #1a47ab;
   padding: 1rem;
 }
